			   XPCE ChangeLog
			   ==============

VERSION 6.1.10, distributed with SWI-Prolog 5.1.10
==================================================

* ADDED: Class keybinding reports pending keystrokes of multi-key commands.

VERSION 6.1.9, distributed with SWI-Prolog 5.1.9
================================================

* ADDED: Enhanced HTML/XGML/XML structure viewer from library(doc/xml_browse)
  with search and some more goodies.  Added this tool to to demo programs.

* MODIFIED: Use win_btnface for default background colour of dialog
  windows.  Seems to make more sense to get a reasonable default
  colour on Windows XP.

* ADDED: PceEmacs: cross-referencer check for :- arithmetic_function/1.

* ADDED: optional `before' argument to `node->son' for efficient insertion
  of nodes at arbitrary locations.

* FIXED: Bug#27 icon directory prolog/lib/doc/icons was not installed.
  Lourens van der Meij.

* FIXED: PceEmacs: do not signal ->idle when a gesture is in progress
  (avoids re-colouring while waiting for the user to select a popup-entry).

* FIXED: library(pce_style_item). Ferreira Maurizio.

* ADDED: <->gap to graphical_browser (library(pce_graphical_browser)).

* FIXED: Placing of window objects in tables (class table).

* FIXED: PceEmacs OWL-mode: open_document namespace declarations.

* ADDED: PceEmacs colourise "Comment":: in method-body.

VERSION 6.1.8, distributed with SWI-Prolog 5.1.8
================================================

* ADDED: library(pce_identifier_item) providing the class identifier_item.

* FIXED: tool_bar->activate if there are `gaps' in the toolbar

* ADDED: PceEmacs cross-references now deals with the :- meta_predicate
  declaration.


VERSION 6.1.7, distributed with SWI-Prolog 5.1.7
================================================

* ENHANCED: indirection in class editable_text to make it easier to modify
  edit-mode feedback in subclasses.

* FIXED: Bug #14: printer handling for PceDraw (Lourens van der Meij).
